@@ -115,6 +115,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Pascal                 Tux
 - Perl                   Andreas Gohr, Ben Keen
 - PIC16xxx assembler     Phil Mattison
+- Pixel Bender           Richard Olsson
 - PL/SQL                 Victor Engmark
 - POV-Ray                Carl Fürstenberg
 - PowerShell             Frode Aarebrot
